# diploma

./: .gitignore  CMakeLists.txt  graph.py  settings.json  solver.py  test.ipynb
src/: integration_utils.cpp  integration_utils.h  main.cpp  matrix.cpp  matrix.h  polynom.cpp  polynom.h  solver.cpp  solver.h  test.cpp  test.h  transformer.cpp  transformer.h  utils.cpp  utils.h
